# stocklens

./: .dockerignore  .gitignore  .gitleaks.toml  .hadolint.yaml  .pre-commit-config.yaml  .trivyignore  App.tsx  LICENSE  Makefile  README.md  app.json  babel.config.js  commitlint.config.js  docker-compose.yml  eslint.config.js  implementation_plan.md  jest.config.js  jest.setup.ts  package-lock.json  package.json  tsconfig.json
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml  deploy.yml  eval.yml
__mocks__/: svgMock.js
airflow/: .env.example  Dockerfile  docker-compose.yml  requirements.txt
airflow/config/: airflow.cfg
airflow/dags/: test_dag.py  weekly_retraining.py
airflow/scripts/: drop_alembic_version.py  init_airflow_variables.sh
assets/demos/: agent_eval_GHactions.mov
backend/: .dockerignore  .env.example  Dockerfile  alembic.ini  pyproject.toml
backend/agent_eval/: __init__.py  golden_dataset.json  run_experiment.py  upload_dataset.py
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_add_receipt_notes_and_transaction_date.py  0003_add_cash_flows.py  0004_add_cascade_decisions.py  0005_add_prediction_log_and_drift_metrics.py  0006_widen_drift_period_columns.py  0007_ensure_holdings_unique_index.py  0008_currency_instruments_gbp.py  0009_add_spending_category_id_to_transactions.py  0010_agent_conversations_refactor.py  0011_add_conversation_feedback.py  af46e8a08234_create_spending_and_prediction_tables.py  d2f4e1b3c5a7__initial_schema.py
backend/docker/: bootstrap.py
backend/ml/: .dockerignore  ARCHITECTURE.md  Dockerfile  __init__.py  build-and-push.sh  config.py  dataset.py  evaluate.py  features.py  hpo.py  labeling.py  mlflow_manager.py  model.py  pipeline.py  pyproject.toml  reference_distributions.py  train.py  utils.py
backend/ml/features-engine/: Cargo.toml  pyproject.toml
backend/ml/features-engine/src/: atr.rs  bollinger.rs  compute_all.rs  lib.rs  log_returns.rs  macd.rs  moving_averages.rs  obv.rs  roc.rs  rolling_volatility.rs  rsi.rs  volatility_rank.rs  williams_r.rs
backend/ml/features-engine/tests/: .gitkeep
backend/ml/tests/: test_champion_gate.py  test_ml_pipeline.py  test_reference_distributions.py
backend/model_artifacts/: model.pt
backend/sagemaker/: Dockerfile.sagemaker  serve.py
backend/scripts/: seed_eval.py
backend/src/: config.py  limiter.py  main.py  types.py
backend/src/agent/: __init__.py  graph.py  repository.py  router.py  schemas.py  service.py  tool_endpoints.py  tools.py
backend/src/auth/: dependencies.py  router.py  schemas.py  utils.py
backend/src/cache/: redis.py
backend/src/cash_flows/: __init__.py  repository.py  router.py  schemas.py
backend/src/categories/: merchant_map.py  router.py  schemas.py  seed.py
backend/src/database/: __init__.py  connection.py  init_db.py  schema.py
backend/src/drift/: __init__.py  evidently_reporter.py  repository.py  router.py  schemas.py  service.py  utils.py
backend/src/holdings/: router.py  schemas.py
backend/src/market/: __init__.py  fx.py  provider.py  repository.py  router.py  schemas.py
backend/src/performance/: __init__.py  calculations.py  router.py  schemas.py
backend/src/portfolios/: router.py  schemas.py
backend/src/prediction/: __init__.py  prediction_logger.py  router.py  schemas.py  service.py
backend/src/receipts/: __init__.py  bedrock.py  cache.py  cascade.py  llm_extractor.py  merchant_match.py  models.py  ocr.py  router.py
backend/src/transactions/: __init__.py  router.py  schemas.py
backend/tests/: conftest.py  eval_dataset.py  smoke_test.py  test_agent_eval.py  test_agent_graph.py  test_agent_repository.py  test_agent_router.py  test_agent_service.py  test_agent_tool_endpoints.py  test_agent_tools.py  test_auth.py  test_auth_dependencies.py  test_auth_utils.py  test_cache.py  test_cascade.py  test_cash_flows.py  test_cash_flows_repository.py  test_categories.py  test_categories_merchant_map.py  test_categories_seed.py  test_config.py  test_database_connection.py  test_drift_evidently_reporter.py  test_drift_repository.py  test_drift_router.py  test_drift_service_class.py  test_drift_utils.py  test_eval.py  test_holdings.py  test_init_db.py  test_llm_extractor.py  test_main.py  test_market.py  test_market_fx.py  test_market_provider_edge_cases.py  test_market_repository_edge_cases.py  test_merchant_map.py  test_merchant_match.py  test_ocr.py  test_performance.py  (+11 more)
backend/tests/ml/: conftest.py  test_champion_gate.py  test_ml_config.py  test_ml_train.py  test_ml_utils.py  test_mlflow_manager.py
backend/tests/test_drift/: conftest.py  test_drift_service.py  test_evidently_reporter.py  test_repository.py  test_router.py
backend/tests/test_ml/: __init__.py  equivalence_harness.py  test_champion_gate.py  test_dataset.py  test_evaluate.py  test_features.py  test_hpo.py  test_labeling.py  test_model.py
docs/: CONTEXT.md  MASTER_PLAN.md  PHASE1.5_NLP_IMPLEMENTATION.md  PHASE1_IMPLEMENTATION.md  PHASE4_IMPLEMENTATION.md  PHASE5_IMPLEMENTATION.md  PHASE6_IMPLEMENTATION.md  TRACKER.md  currency_handling_plan.md  expose_MLF_&_AF_GUI_ALB.md  frontend_agent_integration_plan.md  goal_tool_review.md  lstm_frontend_implementation_plan.md
docs/adr/: 002-twr-cash-flow-simplification.md  004-separate-market-and-performance-modules.md  007-bedrock-secret-removal.md  008-terraform-remote-state.md  009-ecs-arm64-build.md
docs/archive/: PHASE1_IMPLEMENTATION.md  PHASE2_IMPLEMENTATION.md  PHASE2_R4_PRD.md  PHASE3_IMPLEMENTATION.md  PHASE3_R4.5_IMPLEMENTATION.md  PHASE5_IMPLEMENTATION.md
frontend/: index.ts  jest.config.js  jest.setup.ts
scripts/: seed_ohlcv.py
src/components/: ConfirmationPrompt.tsx  DangerButton.tsx  FormInput.tsx  IconButton.tsx  PageHeader.tsx  ReceiptsSorter.tsx  ResponsiveContainer.tsx  ScreenContainer.tsx  StockCard.tsx
terraform/: .checkov.yml  .tfsec.yml  dev.auto.tfvars.json  ecr.tf  ecs.tf  elasticache.tf  iam.tf  locals.tf  main.tf  outputs.tf  rds.tf  secrets.tf  security_groups.tf  terraform.tfvars.example  tfplan  variables.tf
(+251 files in other folders)
