[project]
name = "stocklens-backend"
version = "0.1.0"
description = "StockLens FastAPI backend — OCR, portfolio tracking, and investment analysis"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.138.0",
    "uvicorn[standard]",
    "asyncpg>=0.30.0",
    "bcrypt>=5.0.0",
    "pyjwt>=2.13.0",
    "python-multipart>=0.0.18",
    "pydantic-settings>=2.14.0",
    "pydantic[email]>=2.0.0",
    "redis>=5.2.0",
    "slowapi>=0.1.9",
    "alembic>=1.14.0",
    "pytesseract>=0.3.13",
    "opencv-python-headless>=4.10.0",
    "Pillow>=11.0.0",
    "boto3>=1.43.0",
    "langchain-aws>=1.6.0",
    "httpx>=0.28.0",
    "structlog>=24.4.0",
    "python-dotenv>=1.0.0",
    "yfinance>=1.5.1",
    "tenacity>=9.0.0",
    "rapidfuzz>=3.0.0",
    "torch>=2.12.0",
    "pandas>=2.3.0",
    "numpy>=2.1.0",
    "matplotlib>=3.11.0",
    "scikit-learn>=1.9.0",
    "psycopg2-binary>=2.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "pytest-mock>=3.14.0",
]

[tool.uv.sources]
torch = { index = "pytorch-cpu" }

[tool.uv]
environments = ["sys_platform == 'linux'", "sys_platform == 'darwin'"]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
