[project]
name = "stocklens-backend"
version = "0.1.0"
description = "StockLens FastAPI backend — OCR, portfolio tracking, and investment analysis"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.138.0",
    "uvicorn[standard]",
    "asyncpg>=0.30.0",
    "bcrypt>=5.0.0",
    "pyjwt>=2.13.0",
    "python-multipart>=0.0.18",
    "pydantic-settings>=2.14.0",
    "pydantic[email]>=2.0.0",
    "redis>=5.2.0",
    "slowapi>=0.1.9",
    "alembic>=1.14.0",
    "pytesseract>=0.3.13",
    "opencv-python-headless>=4.10.0",
    "Pillow>=11.0.0",
    "boto3>=1.43.0",
    "langchain-aws>=1.6.0",
    "langgraph>=1.0.0",
    "langchain-core>=0.3.0",
    "langsmith>=0.3.0",
    "httpx>=0.28.0",
    "structlog>=24.4.0",
    "python-dotenv>=1.0.0",
    "yfinance>=1.5.1",
    "tenacity>=9.0.0",
    "rapidfuzz>=3.0.0",
    "torch>=2.12.0",
    "pandas>=2.3.0",
    "numpy>=2.1.0",
    "matplotlib>=3.11.0",
    "scikit-learn>=1.9.0",
    "optuna>=4.0.0",
    "mlflow>=3.14.0",
    "psutil>=6.0.0",
    "psycopg2-binary>=2.9",
    "maturin>=1.14.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "pytest-mock>=3.14.0",
    "pytest-xdist>=3.6.0",
    "freezegun>=1.5.0",
    "evidently>=0.7",
]

[tool.uv.sources]
torch = { index = "pytorch-cpu" }

[tool.uv]
environments = ["sys_platform == 'linux'", "sys_platform == 'darwin'"]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["UP040"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = [
    "ignore::DeprecationWarning:numpy.*",
    "ignore::DeprecationWarning:evidently.*",
    "ignore::DeprecationWarning:torch.jit.*",
    "ignore::DeprecationWarning:slowapi.*",
    "ignore::ResourceWarning",
]
markers = [
    "integration: marks tests as integration tests (require running PostgreSQL)",
    "slow: marks tests as slow-running (deselect with '-m \"not slow\"')",
    "ml: marks tests as ML pipeline tests",
]
# CI overrides — addopts are for dev; CI uses explicit flags
addopts = "-v --tb=short --strict-markers"

[tool.coverage.run]
source = ["src"]
omit = [
    "tests/*",
    "*/migrations/*",
    "*/alembic/*",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
fail_under = 60
show_missing = true

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]
