[project]
name = "stocklens-ml"
version = "0.1.0"
description = "StockLens ML training pipeline - PyTorch LSTM directional forecasting"
requires-python = ">=3.14"
dependencies = [
    "torch>=2.12.0",
    "mlflow>=3.14.0",
    "scikit-learn>=1.6.0",
    "numpy>=2.1.0",
    "pandas>=2.3.0",
    "matplotlib>=3.10.0",
    "asyncpg>=0.30.0",
    "psutil>=6.0.0",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "optuna>=4.0.0",
    "httpx>=0.28.1",
]

[tool.uv.sources]
torch = { index = "pytorch-cpu" }

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
