[package]
name = "features-engine"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.29" }
numpy = "0.29"

[dev-dependencies]
rand = "0.8"

[features]
default = []
# Enable when building the actual .so for Python
extension = ["pyo3/extension-module"]
